<resources>
    <string name="app_name">MyShopNet</string>

    <string name="description">image</string>
    <string name="title_activity_login">ENTER DETAILS TO LOGIN</string>
    <string name="hint_email_id">Email ID</string>
    <string name="hint_email_password">Password</string>
    <string name="label_forgot_password"><u>Forgot Password?</u></string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="button_label_login">"Login"</string>
    <string name="don.t_have_an_account">Don\'t have an account?</string>
    <string name="invalid_password">Password must be >5 characters</string>
    <string name="register"><u>Register</u></string>

    <string name="create_account">CREATE AN ACCOUNT</string>
    <string name="hint_lastName">Last name</string>
    <string name="hint_firstName">First name</string>
    <string name="editText_hint_confirmPassword">Confirm Password</string>
    <string name="agree_termAndConditions">I Agree to the</string>
    <string name="termsConditions"><u> Terms &amp; Conditions</u></string>
    <string name="button_label_register">Register</string>
    <string name="already_have_account">Already have an account?</string>
    <string name="login"><u>Login</u></string>
    <string name="registeredSuccessfully">Registered Successfully</string>

    <string name="error_message_firstName">Please enter first name.</string>
    <string name="error_message_lastName">Please enter last name.</string>
    <string name="error_message_email">Please enter valid email.</string>
    <string name="error_message_password">Please enter password.</string>
    <string name="error_message_confirmPassword">Please enter confirm password.</string>
    <string name="error_message_password_confirmPassword_mismatch">Password and confirm password does not match.</string>
    <string name="error_message_termsAndCondition">Please agree terms and condition.</string>
    <string name="successfully_registered">Registered Successfully!</string>

    <string name="pleaseWait">Please Wait...</string>

    <string name="title_forgotPassword">FORGOT PASSWORD</string>
    <string name="forgotPassword_titleDescription">Enter your e-mail ID, we\'ll send you a email to reset your MyShopNet account\'s password.</string>
    <string name="button_labelSubmit">Submit</string>
    <string name="back_login">Back to</string>

    <string name="emailSuccessfullySent">Email has been sent to reset your password\!</string>

    <string name="terms_conditions">TERMS AND CONDITIONS</string>
    <string name="termsTitle01"> Agreement to terms :</string>
    <string name="termsTitleAgreement">IF YOU DO NOT AGREE WITH ALL OF THESE TERMS OF USE, THEN YOU ARE EXPRESSLY PROHIBITED FROM USING THE APPLICATION AND YOU MUST DISCONTINUE USE IMMEDIATELY.</string>
    <string name="termsTitle02">Price and Product Descriptions</string>
    <string name="termsTitlePrice">There\’s a lot going on here at MyShopNet HQ and from time to time our busy MyShopNeters may price up or describe a product or promo wrongly. If we discover an error for any goods you’ve ordered, we will tell you ASAP and give you the option of reconfirming your order (at the correct price) or cancelling it.                                                                                                                                                              If we can\’t get in touch with you, we will treat the order as cancelled. If you cancel and you\’ve already paid, we will refund you in full. Prices include VAT (where applicable), but keep in mind that there may be other taxes that you need to pay which aren\’t imposed by us or ASOS Payments. Depending on the value of your order or the delivery option or address you choose\, delivery costs may also be charged (see below). Such additional charges will be clearly shown during the checkout process and included in the \'Total Cost\'.</string>

    <string name="title_profileComplete">COMPLETE PROFILE</string>
    <string name="title_editProfile">EDIT PROFILE</string>
    <string name="editText_mobileNumber">Mobile Number</string>
    <string name="radioButton_male">MALE</string>
    <string name="radioButton_female">FEMALE</string>
    <string name="button_labelSave">Save</string>
    <string name="image_failedSelection">Image selection failed! Please try again.</string>
    <string name="error_message_mobile_number">Please enter a valid mobile number</string>
    <string name="profile_updatedSuccessfully">Your profile was updated successfully</string>
    <string name="read_permission_denied">Oops, permission denied. You can also allow it from settings.</string>

    <string name="title_activity_navigation">NavigationActivity</string>
    <string name="title_home">Home</string>
    <string name="please_click_again">Please click back again to exit.</string>
    <string name="actionSettings">Settings</string>
    <string name="title_dashboard">Order</string>
    <string name="title_cart">Cart</string>
    <string name="Settings">Settings</string>

    <string name="settingActivity">Settings</string>
    <string name="labelEdit">Edit</string>
    <string name="labelAddresses">Addresses</string>
    <string name="buttonLabel_logout">Logout</string>
    <string name="hint_searchBar">Search Bar</string>

    <string name="addProducts">Add Product</string>
    <string name="hint_productName">Enter Product Name</string>
    <string name="hint_productDetails">Add Product</string>
    <string name="productPageDetails">Fill in the details below to add new product:</string>
    <string name="hint_productCategory">Enter Product Category</string>
    <string name="hint_productDescription">Enter Product Description (Optional)</string>
    <string name="hint_productPrice">Enter Product Price</string>
    <string name="hint_productOffer">Enter Product Offer (Optional)</string>
    <string name="hint_productSize">Enter Product Size (Optional) | use , between each new size</string>
    <string name="button_label_images">Click here to Add Product Image</string>
    <string name="button_addToCart">Add to Cart</string>
    <string name="quantityNumber">0</string>
    <string name="quantitySize">L</string>
    <string name="title_myCart">My Cart</string>
    <string name="cartTotal">Total : </string>
    <string name="cartTotalPrice">£100</string>
    <string name="button_checkout">Checkout</string>
    <string name="emptyBox_title">Shopping cart is empty</string>
    <string name="create_address">Address</string>
    <string name="hint_houseNumber">House Number</string>
    <string name="hint_fullName">Full Name</string>
    <string name="hint_street">Street</string>
    <string name="editText_hint_city">City</string>
    <string name="editText_hint_postCode">Post Code</string>
    <string name="button_label_delete">Delete</string>
    <string name="button_label_save">Save</string>
    <string name="buttonLabel_addAddress">Add</string>

</resources>