<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Activities.ForgotPasswordActivity">

    <FrameLayout
        android:id="@+id/frameLayout_image"
        android:layout_width="wrap_content"
        android:layout_height="@dimen/image_height"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <ImageView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:contentDescription="@string/description"
            android:scaleType="fitXY"
            android:src="@drawable/background1">
        </ImageView>

        <ImageView
            android:layout_width="@dimen/logo_width_size"
            android:layout_height="@dimen/logo_height_size"
            android:layout_gravity="center"
            android:contentDescription="@string/app_name"
            android:scaleType="fitCenter"
            android:src="@drawable/myshopnet_logo"
            app:tint="@color/whiteThemeColor">
        </ImageView>

        <androidx.appcompat.widget.Toolbar
            android:id="@+id/toolBar_forgotPassword"
            android:layout_width="match_parent"
            android:layout_height="?attr/actionBarSize"
            android:layout_gravity="top">
        </androidx.appcompat.widget.Toolbar>
    </FrameLayout>

    <com.example.myshopnetapp.Utilities.MSNTextViewBold
        android:id="@+id/textView_forgotTitle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="35dp"
        android:text="@string/title_forgotPassword"
        android:textColor="@color/primaryColor"
        android:textSize="@dimen/forgotPassword_titleTextSize"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/frameLayout_image">
    </com.example.myshopnetapp.Utilities.MSNTextViewBold>

    <com.example.myshopnetapp.Utilities.MSNTextView
        android:id="@+id/textView_description"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="15dp"
        android:layout_marginEnd="10dp"
        android:layout_marginTop="8dp"
        android:gravity="center"
        android:text="@string/forgotPassword_titleDescription"
        android:textColor="@color/secondaryTextColor"
        android:textSize="@dimen/forgotPassword_titleDescription_textSize"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView_forgotTitle">
    </com.example.myshopnetapp.Utilities.MSNTextView>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/textInputLayout_emailID"
        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="20dp"
        android:layout_marginEnd="16dp"
        android:hint="@string/hint_email_id"
        android:textColorHint="@color/secondaryTextColor"
        app:boxStrokeColor="@color/pinkThemeColor"
        app:endIconTint="@color/pinkThemeColor"
        app:hintTextColor="@color/pinkThemeColor"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView_description">

        <com.example.myshopnetapp.Utilities.MSNEditText
            android:id="@+id/editText_emailID"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="textEmailAddress"
            android:drawableLeft="@drawable/ic_baseline_email_24"
            android:padding="@dimen/edit_padding"
            android:textColor="@color/primaryColor"
            android:textSize="@dimen/edit_textSize">
        </com.example.myshopnetapp.Utilities.MSNEditText>
    </com.google.android.material.textfield.TextInputLayout>

    <com.example.myshopnetapp.Utilities.MSNButton
        android:id="@+id/button_submit"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:layout_marginStart="16dp"
        android:layout_marginTop="30dp"
        android:layout_marginEnd="16dp"
        android:background="@drawable/button_background"
        android:foreground="?attr/selectableItemBackground"
        android:paddingTop="@dimen/button_padding"
        android:paddingBottom="@dimen/button_padding"
        android:text="@string/button_labelSubmit"
        android:textColor="@android:color/white"
        android:textSize="@dimen/button_textSize"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/textInputLayout_emailID">
    </com.example.myshopnetapp.Utilities.MSNButton>

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="25dp"
        android:gravity="center_vertical"
        android:orientation="horizontal"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/button_submit">

        <com.example.myshopnetapp.Utilities.MSNTextView
            android:id="@+id/tv_already_have_account"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:padding="@dimen/text_view_clickable"
            android:text="@string/back_login"
            android:textColor="@color/secondaryTextColor"
            android:textSize="@dimen/labelTextView_TextSize">
        </com.example.myshopnetapp.Utilities.MSNTextView>

        <com.example.myshopnetapp.Utilities.MSNTextViewBold
            android:id="@+id/textView_loginForgetPassword"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:foreground="?attr/selectableItemBackground"
            android:textColor="@color/primaryColor"
            android:padding="@dimen/text_view_clickable"
            android:text="@string/login"
            android:textSize="@dimen/labelTextView_TextSize">
        </com.example.myshopnetapp.Utilities.MSNTextViewBold>
    </LinearLayout>
</androidx.constraintlayout.widget.ConstraintLayout>