<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation2"
    android:label="@string/title_cart"
    app:startDestination="@+id/navigation_home">

    <fragment
        android:id="@+id/navigation_home"
        android:name="com.example.myshopnetapp.Activities.ui.home.HomeFragment"
        android:label="@string/title_home"
        tools:layout="@layout/fragment_home" >
        <action
            android:id="@+id/action_navigation_home_to_productDetailsFragment"
            app:destination="@id/productDetailsFragment" />
    </fragment>

    <fragment
        android:id="@+id/navigation_dashboard"
        android:name="com.example.myshopnetapp.Activities.ui.Order.UserOrderFragment"
        android:label="@string/title_dashboard"
        tools:layout="@layout/fragment_userorders" >
        <action
            android:id="@+id/action_navigation_dashboard_to_productDetailsFragment"
            app:destination="@id/productDetailsFragment" />
        <action
            android:id="@+id/action_navigation_dashboard_to_orderDetailFragment"
            app:destination="@id/orderDetailFragment" />
    </fragment>

    <fragment
        android:id="@+id/navigation_notifications"
        android:name="com.example.myshopnetapp.Activities.ui.Cart.CartFragment"
        android:label="@string/title_cart"
        tools:layout="@layout/fragment_cart" >
        <action
            android:id="@+id/action_navigation_notifications_to_productDetailsFragment"
            app:destination="@id/productDetailsFragment" />
        <action
            android:id="@+id/action_navigation_notifications_to_billingFragment"
            app:destination="@id/billingFragment" />
    </fragment>
    <fragment
        android:id="@+id/productDetailsFragment"
        android:name="com.example.myshopnetapp.Activities.Fragments.Frag.ProductDetailsFragment"
        android:label="ProductDetailsFragment"
        tools:layout="@layout/fragment_product_details">
        <argument
            android:name="product"
            app:argType="com.example.myshopnetapp.Model.Product" />
    </fragment>
    <fragment
        android:id="@+id/addressFragment"
        android:name="com.example.myshopnetapp.Activities.Fragments.Frag.AddressFragment"
        android:label="AddressFragment"
        tools:layout="@layout/fragment_user_address"/>
    <fragment
        android:id="@+id/billingFragment"
        android:name="com.example.myshopnetapp.Activities.Fragments.Frag.BillingFragment"
        android:label="BillingFragment"
        tools:layout="@layout/fragment_billing">
        <action
            android:id="@+id/action_billingFragment_to_addressFragment"
            app:destination="@id/addressFragment" />
        <argument
            android:name="totalPrice"
            app:argType="float" />
        <argument
            android:name="products"
            app:argType="com.example.myshopnetapp.Model.CartProduct[]" />
    </fragment>
    <fragment
        android:id="@+id/orderDetailFragment"
        android:name="com.example.myshopnetapp.Activities.Fragments.Frag.OrderDetailFragment"
        android:label="OrderDetailFragment" >
        <argument
            android:name="order"
            app:argType="com.example.myshopnetapp.Model.Order" />
    </fragment>
</navigation>